--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
-	"name": "odyssey-theme",
-	"version": "2.0.2",
+	"name": "LeadGen-GPT Web",
+	"version": "0.0.2",
 	"private": false,
-	"repository": {
-		"type": "git",
-		"url": "git@github.com:treefarmstudio/odyssey-theme"
-	},
 	"scripts": {
 		"dev": "astro dev",
 		"start": "astro dev",
