--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"start": "astro dev",
 		"build": "astro build",
 		"preview": "astro preview",
-		"format": "npx prettier -w ."
+		"format": "npx prettier -w .",
+		"postbuild": "node generate-urls.js"
 	},
 	"devDependencies": {
 		"@astrojs/lit": "^4.0.1",
